[gd_scene load_steps=36 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]
[ext_resource path="res://SF Fedora.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://il vento d'oro.wav" type="AudioStream" id=3]
[ext_resource path="res://pngfuel.com.png" type="Texture" id=4]
[ext_resource path="res://5bZbbC9.png" type="Texture" id=5]
[ext_resource path="res://pngguru.com.png" type="Texture" id=6]
[ext_resource path="res://tumblr_on116nTDwy1s1odqho1_1280.png" type="Texture" id=7]
[ext_resource path="res://Jotaro Walking/1.png" type="Texture" id=8]
[ext_resource path="res://Jotaro Idle/9.png" type="Texture" id=9]
[ext_resource path="res://Jotaro Walking/7.png" type="Texture" id=10]
[ext_resource path="res://Jotaro Idle/11.png" type="Texture" id=11]
[ext_resource path="res://Jotaro Idle/12.png" type="Texture" id=12]
[ext_resource path="res://Jotaro Walking/9.png" type="Texture" id=13]
[ext_resource path="res://Jotaro Idle/4.png" type="Texture" id=14]
[ext_resource path="res://Jotaro Idle/5.png" type="Texture" id=15]
[ext_resource path="res://Jotaro Idle/6.png" type="Texture" id=16]
[ext_resource path="res://Jotaro Idle/2.png" type="Texture" id=17]
[ext_resource path="res://Jotaro Idle/1.png" type="Texture" id=18]
[ext_resource path="res://Jotaro Walking/4.png" type="Texture" id=19]
[ext_resource path="res://Jotaro Walking/2.png" type="Texture" id=20]
[ext_resource path="res://Jotaro Idle/14.png" type="Texture" id=21]
[ext_resource path="res://Jotaro Idle/13.png" type="Texture" id=22]
[ext_resource path="res://Jotaro Idle/0.png" type="Texture" id=23]
[ext_resource path="res://Jotaro Walking/6.png" type="Texture" id=24]
[ext_resource path="res://Jotaro Walking/3.png" type="Texture" id=25]
[ext_resource path="res://Jotaro Walking/5.png" type="Texture" id=26]
[ext_resource path="res://Jotaro Walking/8.png" type="Texture" id=27]
[ext_resource path="res://game.gd" type="Script" id=28]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://SF Fedora.ttf"

[sub_resource type="DynamicFont" id=2]
size = 65
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 67
font_data = ExtResource( 2 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 20 ), ExtResource( 25 ), ExtResource( 19 ), ExtResource( 26 ), ExtResource( 24 ), ExtResource( 10 ), ExtResource( 27 ), ExtResource( 13 ) ],
"loop": true,
"name": "Jotaro Walking",
"speed": 5.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 18 ), ExtResource( 17 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 22 ), ExtResource( 21 ) ],
"loop": true,
"name": "Jotaro Idle",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=7]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 47
font_data = ExtResource( 2 )

[node name="everything" type="Node2D"]
script = ExtResource( 1 )

[node name="menu" type="Node2D" parent="."]

[node name="Label3" type="Label" parent="menu"]
margin_left = 766.602
margin_top = 183.5
margin_right = 968.602
margin_bottom = 225.5
custom_fonts/font = SubResource( 2 )
text = "gaiden"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="menu"]
margin_left = 519.002
margin_top = 183.5
margin_right = 559.002
margin_bottom = 225.5
custom_fonts/font = SubResource( 2 )
text = "a"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="5bZbbC9" type="Sprite" parent="menu"]
show_behind_parent = true
position = Vector2( 511.709, 304.252 )
scale = Vector2( 0.768271, 0.870463 )
texture = ExtResource( 5 )

[node name="pnggurucom" type="Sprite" parent="menu"]
position = Vector2( 668.798, 197.484 )
scale = Vector2( 0.0583607, 0.0479386 )
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="menu"]
margin_left = 33.3044
margin_top = 18.8228
margin_right = 783.304
margin_bottom = 147.823
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "
Nihilist Pilgrim"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="menu"]
margin_left = 309.136
margin_top = 301.551
margin_right = 715.136
margin_bottom = 501.551
custom_fonts/font = SubResource( 4 )
text = "Play Game "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pausemenu" type="Node2D" parent="."]

[node name="Label3" type="Label" parent="pausemenu"]
margin_left = 766.602
margin_top = 183.5
margin_right = 968.602
margin_bottom = 225.5
custom_fonts/font = SubResource( 2 )
text = "gaiden"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="pausemenu"]
margin_left = 519.002
margin_top = 183.5
margin_right = 559.002
margin_bottom = 225.5
custom_fonts/font = SubResource( 2 )
text = "a"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pnggurucom" type="Sprite" parent="pausemenu"]
position = Vector2( 668.798, 197.484 )
scale = Vector2( 0.0583607, 0.0479386 )
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="pausemenu"]
margin_left = 33.3044
margin_top = 18.8228
margin_right = 783.304
margin_bottom = 147.823
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "
Nihilist Pilgrim"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseButton" type="Button" parent="pausemenu"]
margin_left = 309.136
margin_top = 301.551
margin_right = 715.136
margin_bottom = 501.551
custom_fonts/font = SubResource( 4 )
text = "Resume "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="game" type="Node2D" parent="."]
z_index = -1
script = ExtResource( 28 )

[node name="tumblr_on116nTDwy1s1odqho1_1280" type="Sprite" parent="game"]
show_behind_parent = true
position = Vector2( 511.479, 298.531 )
scale = Vector2( 0.814291, 0.654545 )
texture = ExtResource( 7 )

[node name="Jotaro Idle" type="AnimatedSprite" parent="game"]
visible = false
position = Vector2( 742.544, 342.63 )
scale = Vector2( 4.40633, 4.49821 )
frames = SubResource( 5 )
animation = "Jotaro Idle"
frame = 1
playing = true

[node name="Jotaro Walking" type="AnimatedSprite" parent="game"]
position = Vector2( 1182.87, 338.313 )
scale = Vector2( 4.40633, 4.49821 )
frames = SubResource( 5 )
animation = "Jotaro Walking"
frame = 2
playing = true

[node name="Pos" type="Node" parent="game"]

[node name="Walking" type="Position2D" parent="game/Pos"]
position = Vector2( 1189.32, 332.404 )

[node name="Idle" type="Position2D" parent="game/Pos"]
position = Vector2( 748.989, 347.514 )

[node name="Tween" type="Tween" parent="game"]

[node name="subtitle" type="Label" parent="game"]
margin_left = 315.137
margin_top = 395.0
margin_right = 715.137
margin_bottom = 621.0
custom_fonts/font = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="yazi" type="Label" parent="game"]
margin_left = 15.1094
margin_top = 41.0109
margin_right = 475.109
margin_bottom = 137.011
custom_fonts/font = SubResource( 6 )
text = "Azabu-Juban, Tokyo

1992"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 907.073
margin_top = 489.029
margin_right = 992.073
margin_bottom = 574.029
icon = ExtResource( 4 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2( -2.15857, 10.7923 )
stream = ExtResource( 3 )
autoplay = true
[connection signal="hide" from="menu" to="." method="_on_menu_hide"]
[connection signal="pressed" from="menu/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="menu/Button" to="game" method="_on_Button_pressed"]
[connection signal="hide" from="pausemenu" to="." method="_on_menu_hide"]
[connection signal="pressed" from="pausemenu/PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="mouse_click" from="game" to="game" method="_on_game_mouse_click"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
